task_3/minio_empty_dir.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio-empty-dir
  labels:
    app: minio-empty-dir
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio-empty-dir
  template:
    metadata:
      labels:
        app: minio-empty-dir
    spec:
      containers:
        - name: minio
          image: minio/minio
          args: ["server", "/data", "--console-address", ":9001"]
          ports:
            - containerPort: 9001
          volumeMounts:
            - name: data
              mountPath: "data"
              readOnly: false
      volumes:
        - name: data
          emptyDir: {}
